calculated Llama3-8B-Instruct metrics, starting transformer

--- a/baselines.ipynb
+++ b/baselines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,12 +487,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_id = \"google-t5/t5-small\"\n",
-    "translator = pipeline('translation_en_to_fr', model=model_id, device_map='auto')"
+    "translator = pipeline('translation_fr_to_en', model=model_id, device_map='auto', max_length=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "books = load_dataset(\"opus_books\", \"en-fr\")\n",
+    "books = books[\"train\"].train_test_split(test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'en': 'This series of actions, very deliberate towards the end, occupied fully a minute; Mademoiselle de La Mole gazed at him in astonishment.', 'fr': 'Tout ce mouvement, fort lent sur la fin, dura bien une minute ; Mlle de La Mole le regardait étonnée.'}, {'en': 'The Belgians have come with little Négrel.\"', 'fr': 'Les Belges sont arrivés avec le petit Négrel.'}]\n",
+      "Dataset({\n",
+      "    features: ['id', 'translation'],\n",
+      "    num_rows: 25417\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(books['test'][:2]['translation'])\n",
+    "print(books['test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'translation_text': \"Cette série d'actions, très délibérée vers la fin, occupait pleinement une minute; Mademoiselle de La Mole l'a regardé dans l'étonnement.\"}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translator(books['test'][0]['translation']['en'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length = 50\n",
+    "preds = []\n",
+    "refs = [dic['en'] for dic in books['test'][:length]['translation']]\n",
+    "for dic in books['test'][:length]['translation']:\n",
+    "    preds.append(translator(dic['fr'])[0]['translation_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['« « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « « «',\n",
+       " '--Comment?',\n",
+       " 'J’ai bien pensé, quand les garçons du Cours m’ont parlé de votre aventure mystérieuse, qu’il s’agissait du vieux domaine perdu.']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['\"Come to me, I am dying.\"',\n",
+       " '\"What?',\n",
+       " 'It occurred to me, when the other boys told me about your mysterious adventure, that it concerned the old forsaken manor.']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(preds[:3])\n",
+    "display(refs[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\abhiv\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\abhiv\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\abhiv\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from evaluate import load, combine\n",
+    "chrf = load('chrf')\n",
+    "gleu = load('google_bleu')\n",
+    "rouge = load('rouge') \n",
+    "bleu = load('bleu')\n",
+    "meteor = load('meteor')\n",
+    "\n",
+    "metrics = combine([chrf, bleu, rouge, meteor, gleu])\n",
+    "\n",
+    "scores = metrics.compute(predictions=preds, references=refs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score': 19.28767241064961, 'char_order': 6, 'word_order': 0, 'beta': 2}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chrf.compute(predictions=preds, references=refs, lowercase=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score': 18.860057700714165,\n",
+       " 'char_order': 6,\n",
+       " 'word_order': 0,\n",
+       " 'beta': 2,\n",
+       " 'bleu': 0.006051264549352757,\n",
+       " 'precisions': [0.13942307692307693,\n",
+       "  0.01060070671378092,\n",
+       "  0.002653927813163482,\n",
+       "  0.0005592841163310962],\n",
+       " 'brevity_penalty': 0.884195644895183,\n",
+       " 'length_ratio': 0.8904109589041096,\n",
+       " 'translation_length': 2080,\n",
+       " 'reference_length': 2336,\n",
+       " 'rouge1': 0.05301099805809904,\n",
+       " 'rouge2': 0.014037112223234914,\n",
+       " 'rougeL': 0.051314789970239194,\n",
+       " 'rougeLsum': 0.05189339826690352,\n",
+       " 'meteor': 0.08726148209322394,\n",
+       " 'google_bleu': 0.03259975318798848}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
    ]
   },
   {
