pytorch transformer progress

--- a/tokenizer_testing.ipynb
+++ b/tokenizer_testing.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,18 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(BPE(unk_token=\"[UNK]\"))\n",
+    "eng_tokenizer = Tokenizer(BPE(unk_token=\"[UNK]\"))\n",
     "trainer = BpeTrainer(special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
     "\n",
     "english_data = train['English']\n",
     "\n",
-    "tokenizer.pre_tokenizer = ByteLevel()\n",
-    "tokenizer.decoder = decoders.ByteLevel()\n",
-    "tokenizer.train_from_iterator(english_data, trainer)"
+    "eng_tokenizer.pre_tokenizer = ByteLevel()\n",
+    "eng_tokenizer.decoder = decoders.ByteLevel()\n",
+    "eng_tokenizer.train_from_iterator(english_data, trainer)"
    ]
   },
   {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -297,16 +297,68 @@
        "'Two fighters in the UFC were striking each other, then one of them ended up taking his opponent down and submitting him.'"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokens = ids = bpe_gpt2.tokenize('Two fighters in the UFC were striking each other, then one of them ended up taking his opponent down and submitting him.')\n",
+    "tokens = bpe_gpt2.tokenize('Two fighters in the UFC were striking each other, then one of them ended up taking his opponent down and submitting him.')\n",
     "print(tokens)\n",
     "ids = bpe_gpt2.encode('Two fighters in the UFC were striking each other, then one of them ended up taking his opponent down and submitting him.')\n",
     "bpe_gpt2.decode(ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bat', 'ting']\n",
+      "['dis', 'eng', 'age']\n",
+      "['ar', 'che', 'ologists']\n",
+      "['ey', 'ewitness', 'es']\n",
+      "['phot', 'ographers']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_words = 'batting disengage archeologists eyewitnesses photographers'\n",
+    "for word in sample_words.split():\n",
+    "    tokens = bpe_gpt2.tokenize(word)\n",
+    "    print(tokens)\n",
+    "    # ids = bpe_gpt2.encode(word)\n",
+    "    # print(bpe_gpt2.decode(ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ġbatt', 'ing']\n",
+      "['Ġdis', 'en', 'g', 'age']\n",
+      "['Ġarch', 'eo', 'log', 'ist', 's']\n",
+      "['Ġeyewitnesses']\n",
+      "['Ġp', 'ho', 'to', 'g', 'raph', 'ers']\n",
+      "18627 50257\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_words = 'batting disengage archeologists eyewitnesses photographers'\n",
+    "for word in sample_words.split():\n",
+    "    tokens = eng_tokenizer.encode(word).tokens\n",
+    "    print(tokens)\n",
+    "print(eng_tokenizer.get_vocab_size(), bpe_gpt2.vocab_size)"
    ]
   },
   {
@@ -343,13 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PreTrainedTokenizerFast(name_or_path='', vocab_size=16463, model_max_length=1000000000000000019884624838656, is_fast=True, padding_side='right', truncation_side='right', special_tokens={}, clean_up_tokenization_spaces=True),  added_tokens_decoder={\n",
+       "PreTrainedTokenizerFast(name_or_path='', vocab_size=15866, model_max_length=1000000000000000019884624838656, is_fast=True, padding_side='right', truncation_side='right', special_tokens={}, clean_up_tokenization_spaces=True),  added_tokens_decoder={\n",
        "\t0: AddedToken(\"[UNK]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t1: AddedToken(\"[CLS]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t2: AddedToken(\"[SEP]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
@@ -358,7 +410,7 @@
        "}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,23 +424,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[56, 55, 3255, 56, 687, 56, 55, 750, 118, 104, 7992, 709, 53, 1158, 53, 16, 56, 95, 425, 10, 156, 526, 50, 152, 191, 56, 55, 470, 53, 108, 87, 109, 177, 49, 81, 587, 149]]\n",
+      "0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "' mè ekekpulu me egwe mè eririeen̄, inyi ekeche utoon̄ esan̄a me lek udun. awaji okpọkpọ, mè imun̄ ibe ke inu cha îjaan̄.'"
+       "[' mè ekekpulu me egwe mè eririeen̄, inyi ekeche utoon̄ esan̄a me lek udun. awaji okpọkpọ, mè imun̄ ibe ke inu cha îjaan̄.']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ids = fast_tokenizer.encode(\"mè ekekpulu me egwe mè eririeen̄, inyi ekeche utoon̄ esan̄a me lek udun. awaji okpọkpọ, mè imun̄ ibe ke inu cha îjaan̄.\")\n",
-    "fast_tokenizer.decode(ids)"
+    "ids = fast_tokenizer([\"mè ekekpulu me egwe mè eririeen̄, inyi ekeche utoon̄ esan̄a me lek udun. awaji okpọkpọ, mè imun̄ ibe ke inu cha îjaan̄.\"], add_special_tokens=True)\n",
+    "print(ids.get('input_ids'))\n",
+    "print(fast_tokenizer.convert_tokens_to_ids('[UNK]'))\n",
+    "fast_tokenizer.batch_decode(ids['input_ids'])"
    ]
   },
   {
