baseline transformer model with BPE tokenizers. created new train/test splits with new dataset v4. moved bpe tokenizer json

--- a/tokenizer_testing.ipynb
+++ b/tokenizer_testing.ipynb
@@ -69,7 +69,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1cf52af7812249a28ece0246f7af56c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from tokenizers import Tokenizer, decoders\n",
     "from tokenizers.models import BPE\n",
@@ -79,7 +94,7 @@
     "\n",
     "# dataset = load_dataset(\"csv\", data_files=\"data/v3.csv\")\n",
     "\n",
-    "# dataset = load_dataset(\"csv\", data_files=\"data/v3.csv\")\n",
+    "# dataset = load_dataset(\"csv\", data_files=\"data/v4.csv\")\n",
     "# data_splits = dataset['train'].train_test_split(0.1)\n",
     "# train, test = data_splits['train'], data_splits['test']"
    ]
@@ -88,12 +103,69 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ef19ffb4b0c45718dbb1d6cdebc731b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating CSV from Arrow format:   0%|          | 0/28 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ee69e07aed24b988bdac51dd703e52c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating CSV from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b7ead473930415a99f57716a32078ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c2b66772e61443c96f3ed661fb0edb6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# train.to_csv('./data/train.csv')\n",
-    "# test.to_csv('./data/test.csv')\n",
-    "train = load_dataset('csv', data_files='data/train.csv')['train']\n",
-    "test = load_dataset('csv', data_files='data/test.csv')['train']"
+    "# train.to_csv('./data/train2.csv')\n",
+    "# test.to_csv('./data/test2.csv')\n",
+    "train = load_dataset('csv', data_files='data/train2.csv')['train']\n",
+    "test = load_dataset('csv', data_files='data/test2.csv')['train']"
    ]
   },
   {
@@ -114,6 +186,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21988\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find total words and unique words in the Obolo set\n",
+    "import string\n",
+    "data = dataset['train']\n",
+    "unique_words_verse = [set(s.translate(str.maketrans('', '', string.punctuation)).strip().split()) for s in data['Obolo']]\n",
+    "unique_words = set()\n",
+    "for s in unique_words_verse:\n",
+    "    unique_words.update(s)\n",
+    "print(len(unique_words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "freq = defaultdict(int)\n",
+    "for s in data['Obolo']:\n",
+    "    words = s.translate(str.maketrans('', '', string.punctuation)).strip().split()\n",
+    "    for w in words:\n",
+    "        freq[w] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8865"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for k, v in freq.items():\n",
+    "    if v == 1:\n",
+    "        count += 1\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "882513"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total = sum(freq.values()) \n",
+    "total"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 213,
    "metadata": {},
    "outputs": [
@@ -128,7 +283,7 @@
    ],
    "source": [
     "print(tokenizer.get_vocab_size())\n",
-    "unique_words_verse = [set(verse.split()) for verse in obolo_data]\n",
+    "unique_words_verse = [set(verse.split()) for verse in train['obolo']]\n",
     "unique_words = set()\n",
     "for s in unique_words_verse:\n",
     "    unique_words.update(s)\n",
@@ -519,9 +674,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mse244",
+   "display_name": "cs224n-gpu",
    "language": "python",
-   "name": "mse244"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -533,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
